...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <!-- New Item Button -->
            <ImageButton
                android:id="@+id/ibNewItem"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_item"
                android:background="@drawable/bg_components"
                android:padding="8dp"
                android:contentDescription="@string/add_item_icon_desc"
...
